--- a/faq.html
+++ b/faq.html
@@ -87,19 +87,42 @@
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
       <div
-        class="flex flex-col gap-5 h-max list-container pt-24 overflow-y-auto pb-40 py-5 px-2 bg-gray-200 min-h-screen"
+        class="flex flex-col h-max list-container overflow-y-auto pb-40 py-5 bg-gray-200 min-h-screen"
         style="max-width: 900px;">
-        <div class="flex items-center justify-between">
-          <div class="flex gap-4 items-center cursor-pointer"><img src="assets/images/man1.png" alt="avatar"
-              class="w-10 h-10">
-            <div class="flex flex-col w-full"><span class="text-black text-md font-bold">Willsmith</span>
-              <div class="flex gap-4 items-center"><span class="text-black text-sm">Willsmith</span><img
-                  src="assets/images/flag_ca.png" alt="flag" class="rounded-sm"></div>
+        <div class="bg-white h-24"></div>
+        <div class="flex flex-col bg-white divide-y">
+          <div class="cursor-pointer gap-3 flex py-4 px-3">
+            <img src="assets/images/icons/angle_left.svg" alt="back icon"/>
+            <span class="text-xl font-bold">Support</span>
+          </div>
+          <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+            <div class="flex items-center gap-4">
+              <img src="assets/images/icons/ic_info.svg" alt="icon"/>
+              <span>FAQ</span>
             </div>
-          </div>
-          <div class="flex gap-1 sm:gap-4 text-white text-xs sm:text-sm">
-            <button class="rounded-md bg-red-500 px-2 sm:px-8 py-1">Accept</button>
-          </div>
+            <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+          </a>
+          <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+            <div class="flex items-center gap-4">
+              <img src="assets/images/icons/ic_fingerprint.svg" alt="icon"/>
+              <span>Imprint</span>
+            </div>
+            <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+          </a>
+          <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+            <div class="flex items-center gap-4">
+              <img src="assets/images/icons/ic_file.svg" alt="icon"/>
+              <span>Terms and Conditions</span>
+            </div>
+            <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+          </a>
+          <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+            <div class="flex items-center gap-4">
+              <img src="assets/images/icons/ic_world.svg" alt="icon"/>
+              <span>Data Protection</span>
+            </div>
+            <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+          </a>
         </div>
       </div>
     </div>
