--- a/payment.html
+++ b/payment.html
@@ -87,18 +87,61 @@
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
       <div
-        class="flex flex-col gap-5 h-max list-container pt-24 overflow-y-auto pb-40 py-5 px-2 bg-gray-200 min-h-screen"
+        class="flex flex-col h-max list-container overflow-y-auto pb-40 py-5 min-h-screen"
         style="max-width: 900px;">
-        <div class="flex items-center justify-between">
-          <div class="flex gap-4 items-center cursor-pointer"><img src="assets/images/man1.png" alt="avatar"
-              class="w-10 h-10">
-            <div class="flex flex-col w-full"><span class="text-black text-md font-bold">Willsmith</span>
-              <div class="flex gap-4 items-center"><span class="text-black text-sm">Willsmith</span><img
-                  src="assets/images/flag_ca.png" alt="flag" class="rounded-sm"></div>
+        <div class="bg-white h-24"></div>
+        <div class="flex flex-col bg-white divide-y">
+          <div class="cursor-pointer gap-3 flex py-4 px-3">
+            <img src="assets/images/icons/angle_left.svg" alt="back icon"/>
+            <span class="text-xl font-bold">Order summary</span>
+          </div>
+          <div class="px-8 flex flex-col py-4 border-b">
+            <div class="flex justify-between items-center text-gray-500 font-semibold text-sm py-2">
+              <p class="">700 coins</p>
+              <span class="">$ 0.79</span>
+            </div>
+            <div class="flex justify-between items-center text-black font-bold text-md py-2">
+              <p class="">Total</p>
+              <span class="">$ 0.79</span>
+            </div>
+            <div class="flex flex-col text-gray-500 font-semibold text-sm gap-1">
+              <span class="">Pay with a new card</span>
+              <div class="flex lg:w-1/2 bg-gray-100 p-4 gap-2">
+                <img src="assets/images/icons/ic_card.svg" alt="card icon" />
+                <span>Card Number</span>
+              </div>
             </div>
           </div>
-          <div class="flex gap-1 sm:gap-4 text-white text-xs sm:text-sm">
-            <button class="rounded-md bg-red-500 px-2 sm:px-8 py-1">Accept</button>
+          <div class="py-4 px-8">
+            <span class="text-lg font-bold">Other payment methods</span>
+            <div class="flex flex-wrap gap-4 mt-4">
+              <button>
+                <img src="assets/images/icons/ic_sofort.svg" alt="payment icon" />
+              </button>
+              <button>
+                <img src="assets/images/icons/ic_strip.svg" alt="payment icon" />
+              </button>
+              <button>
+                <img src="assets/images/icons/ic_paypal.svg" alt="payment icon" />
+              </button>
+              <button>
+                <img src="assets/images/icons/ic_klarna.svg" alt="payment icon" />
+              </button>
+              <button>
+                <img src="assets/images/icons/ic_micro.svg" alt="payment icon" />
+              </button>
+            </div>
+            <div class="h-48"></div>
+            <div class="flex flex-col gap-4">
+              <div class="sm:items-center flex gap-2">
+                <input type="radio" class="pb-2"/>
+                <p class="text-sm">
+                  By selecting the payment method, <strong> agree to Terms of Purchase for Coins.</strong>
+                </p>
+              </div>
+              <p class="text-sm">Total: <span class="font-bold text-md">€ 0.79</span></p>
+              <button class="px-8 py-2 bg-red-500 rounded-md text-white font-bold w-max">Pay now</button>
+            </div>
           </div>
         </div>
       </div>
