--- a/getcoin.html
+++ b/getcoin.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 
   <script src="assets/js/jquery-3.6.0.js"></script>
-  <script src="assets/js/app.js" ></script>
-  <script src="assets/js/common.js" ></script>
+  <script src="assets/js/app.js"></script>
+  <script src="assets/js/common.js"></script>
 
   <title>Let's Build: With Tailwind CSS - Responsive Navbar</title>
 </head>
@@ -31,13 +31,13 @@
       </div>
       <div class="sm:flex items-center gap-4 hidden">
         <button>
-          <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <button>
-          <img src="assets/images/icons/ic_add.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_add.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <button>
-          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <div class="flex items-center gap-2 relative">
           <div class="rounded-full border-red-500 border w-10 h-10">
@@ -45,9 +45,10 @@
           </div>
           <div class="btn-menu flex gap-1 cursor-pointer">
             <span class="font-confortaa text-md font-bold">Edshreean</span>
-            <img src="assets/images/icons/angle_down.svg" alt="down icon" class="icon-menu"/>
+            <img src="assets/images/icons/angle_down.svg" alt="down icon" class="icon-menu" />
           </div>
-          <div class="hidden toggle-menu bg-white absolute right-0 bottom-0 transform translate-y-full px-8 py-2 shadow-xl mt-4 border">
+          <div
+            class="hidden toggle-menu bg-white absolute right-0 bottom-0 transform translate-y-full px-8 py-2 shadow-xl mt-4 border">
             <ul>
               <li>
                 <a href="myprofile.html">Profile</a>
@@ -61,49 +62,112 @@
       </div>
       <!-- <button class="sm:flex px-8 xl:px-16 bg-red-500 rounded-md text-white hover:bg-red-700 py-2">Register</button> -->
       <button class="flex sm:hidden absolute right-5 menu-button" id="">
-        <img src="assets/images/menu.svg" alt="menu icon" id="menu-icon"/>
+        <img src="assets/images/menu.svg" alt="menu icon" id="menu-icon" />
       </button>
     </div>
-    <div class="hidden absolute bg-white flex flex-col h-full left-0 min-h-screen items-center right-0 shadow-lg gap-4" id="menu-mobile">
+    <div class="hidden absolute bg-white flex flex-col h-full left-0 min-h-screen items-center right-0 shadow-lg gap-4"
+      id="menu-mobile">
       <div class="category-list flex flex-col  gap-4"></div>
       <button class="px-8 xl:px-16 bg-red-500 rounded-md text-white hover:bg-red-700 py-2">Register</button>
     </div>
   </header>
 
   <main class="flex md:px-6 bg-white lg:py-0">
-    <div class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center flex-col gap-10 overflow-y-auto">
+    <div
+      class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center flex-col gap-10 overflow-y-auto">
       <div class="sidebar bottom-0 fixed flex h-3/4 justify-center mt-32 mb-20 overflow-y-auto top-0 ">
         <div class="flex items-start flex-col px-10 divide-y-2">
-        <div id="" class="category-list flex flex-col gap-4 xl:gap-6 pb-10">
-        </div>
-        <div class="pt-10 flex flex-col gap-5">
-          <span class="text-gray-500">Suggest People</span>
-          <div id="user-list" class="flex flex-col gap-4 xl:gap-5">
+          <div id="" class="category-list flex flex-col gap-4 xl:gap-6 pb-10">
           </div>
-          <span class="text-red-500 cursor-pointer">See all</span>
+          <div class="pt-10 flex flex-col gap-5">
+            <span class="text-gray-500">Suggest People</span>
+            <div id="user-list" class="flex flex-col gap-4 xl:gap-5">
+            </div>
+            <span class="text-red-500 cursor-pointer">See all</span>
+          </div>
         </div>
-      </div>
       </div>
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
-      <div
-        class="flex flex-col gap-5 h-max list-container pt-24 overflow-y-auto pb-40 py-5 px-2 bg-gray-200 min-h-screen"
+      <div class="flex flex-col h-max list-container overflow-y-auto pb-40 py-5 min-h-screen"
         style="max-width: 900px;">
-        <div class="flex items-center justify-between">
-          <div class="flex gap-4 items-center cursor-pointer"><img src="assets/images/man1.png" alt="avatar"
-              class="w-10 h-10">
-            <div class="flex flex-col w-full"><span class="text-black text-md font-bold">Willsmith</span>
-              <div class="flex gap-4 items-center"><span class="text-black text-sm">Willsmith</span><img
-                  src="assets/images/flag_ca.png" alt="flag" class="rounded-sm"></div>
+        <div class="bg-white h-24"></div>
+        <div class="flex flex-col bg-white ">
+          <div class="flex items-center justify-between px-2">
+            <div class="cursor-pointer gap-3 flex py-4 px-3">
+              <img src="assets/images/icons/angle_left.svg" alt="back icon" />
+              <span class="text-xl font-bold">Get Coins</span>
+            </div>
+            <span class="text-sm text-red-500 font-bold hidden sm:flex">View transaction history</span>
+          </div>
+          <div class="flex flex-col px-8 py-2">
+            <div class="flex items-center text-sm gap-1">
+              Coin balance:
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-lg font-bold"> 25</span>
+            </div>
+            <span class="text-sm">Recharge coins to send gifts to LIVE hosts. (Based on Credits)</span>
+          </div>
+          <div class="grid grod-cols-2 sm:grid-cols-3 md:grid-cols-4 pt-8 gap-2 px-8">
+            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+              <div class="flex items-center gap-2">
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-xl font-bold">750</span>
+              </div>
+              <span class="text-sm">€ 9.99</span>
+            </div>
+            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+              <div class="flex items-center gap-2">
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-xl font-bold">2300</span>
+              </div>
+              <span class="text-sm">€ 29.99</span>
+            </div>
+            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+              <div class="flex items-center gap-2">
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-xl font-bold">5000</span>
+              </div>
+              <span class="text-sm">€ 59.99</span>
+            </div>
+            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+              <div class="flex items-center gap-2">
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-xl font-bold">14,000</span>
+              </div>
+              <span class="text-sm">€ 149.99</span>
+            </div>
+            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+              <div class="flex items-center gap-2">
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-xl font-bold">30,000</span>
+              </div>
+              <span class="text-sm">€ 299,99</span>
+            </div>
+            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+              <div class="flex items-center gap-2">
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-xl font-bold">1</span>
+              </div>
+              <span class="text-sm">€ 0,014</span>
+            </div>
+            <div class="gird col-span-2 flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+              <div class="flex items-center gap-2">
+                <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
+                <span class="text-xl font-bold">Set Own Value</span>
+              </div>
+              <span class="text-sm">Minumum 750 Credits</span>
             </div>
           </div>
-          <div class="flex gap-1 sm:gap-4 text-white text-xs sm:text-sm">
-            <button class="rounded-md bg-red-500 px-2 sm:px-8 py-1">Accept</button>
+          <span class="text-sm text-red-500 font-bold sm:hidden px-8 mt-6">View transaction history</span>
+          <div class="fixed sm:relative bottom-0 left-0 right-0 w-full py-4 sm:flex flex-col gap-4 mt-8 px-8 border-t sm:border-0 border-black">
+            <p class="text-sm flex justify-between sm:justify-start">Total: <span class="font-bold text-md">€ 0.79</span></p>
+            <button class="px-8 py-2 bg-red-500 rounded-md text-white font-bold w-full sm:w-max">Pay now</button>
           </div>
         </div>
       </div>
     </div>
   </main>
 </body>
-</html>
 
+</html>
