--- a/chat.html
+++ b/chat.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 
   <script src="assets/js/jquery-3.6.0.js"></script>
-  <script src="assets/js/app.js" ></script>
-  <script src="assets/js/common.js" ></script>
+  <script src="assets/js/app.js"></script>
+  <script src="assets/js/common.js"></script>
+  <script src="assets/js/chat.js"></script>
 
   <title>Let's Build: With Tailwind CSS - Responsive Navbar</title>
 </head>
@@ -31,13 +32,13 @@
       </div>
       <div class="sm:flex items-center gap-4 hidden">
         <button>
-          <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <button>
-          <img src="assets/images/icons/ic_add.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_add.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <button>
-          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <div class="flex items-center gap-2 relative">
           <div class="rounded-full border-red-500 border w-10 h-10">
@@ -45,9 +46,10 @@
           </div>
           <div class="btn-menu flex gap-1 cursor-pointer">
             <span class="font-confortaa text-md font-bold">Edshreean</span>
-            <img src="assets/images/icons/angle_down.svg" alt="down icon" class="icon-menu"/>
+            <img src="assets/images/icons/angle_down.svg" alt="down icon" class="icon-menu" />
           </div>
-          <div class="hidden toggle-menu bg-white absolute right-0 bottom-0 transform translate-y-full px-8 py-2 shadow-xl mt-4 border">
+          <div
+            class="hidden toggle-menu bg-white absolute right-0 bottom-0 transform translate-y-full px-8 py-2 shadow-xl mt-4 border">
             <ul>
               <li>
                 <a href="myprofile.html">Profile</a>
@@ -61,49 +63,108 @@
       </div>
       <!-- <button class="sm:flex px-8 xl:px-16 bg-red-500 rounded-md text-white hover:bg-red-700 py-2">Register</button> -->
       <button class="flex sm:hidden absolute right-5 menu-button" id="">
-        <img src="assets/images/menu.svg" alt="menu icon" id="menu-icon"/>
+        <img src="assets/images/menu.svg" alt="menu icon" id="menu-icon" />
       </button>
     </div>
-    <div class="hidden absolute bg-white flex flex-col h-full left-0 min-h-screen items-center right-0 shadow-lg gap-4" id="menu-mobile">
+    <div class="hidden absolute bg-white flex flex-col h-full left-0 min-h-screen items-center right-0 shadow-lg gap-4"
+      id="menu-mobile">
       <div class="category-list flex flex-col  gap-4"></div>
       <button class="px-8 xl:px-16 bg-red-500 rounded-md text-white hover:bg-red-700 py-2">Register</button>
     </div>
   </header>
 
   <main class="flex md:px-6 bg-white lg:py-0">
-    <div class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center flex-col gap-10 overflow-y-auto">
-      <div class="sidebar bottom-0 fixed flex h-3/4 justify-center mt-32 mb-20 overflow-y-auto top-0 ">
-        <div class="flex items-start flex-col px-10 divide-y-2">
-        <div id="" class="category-list flex flex-col gap-4 xl:gap-6 pb-10">
-        </div>
-        <div class="pt-10 flex flex-col gap-5">
-          <span class="text-gray-500">Suggest People</span>
-          <div id="user-list" class="flex flex-col gap-4 xl:gap-5">
-          </div>
-          <span class="text-red-500 cursor-pointer">See all</span>
-        </div>
-      </div>
-      </div>
-    </div>
-    <div class="w-full sm:w-8/12 min-h-screen ">
+    <div class="w-full sm:w-full" >
       <div
-        class="flex flex-col gap-5 h-max list-container pt-24 overflow-y-auto pb-40 py-5 px-2 bg-gray-200 min-h-screen"
-        style="max-width: 900px;">
-        <div class="flex items-center justify-between">
-          <div class="flex gap-4 items-center cursor-pointer"><img src="assets/images/man1.png" alt="avatar"
-              class="w-10 h-10">
-            <div class="flex flex-col w-full"><span class="text-black text-md font-bold">Willsmith</span>
-              <div class="flex gap-4 items-center"><span class="text-black text-sm">Willsmith</span><img
-                  src="assets/images/flag_ca.png" alt="flag" class="rounded-sm"></div>
-            </div>
+        class="flex flex-col h-max list-container overflow-y-auto bg-gray-200 mx-auto xl:w-9/12" >
+        <div class="bg-white h-24"></div>
+        <div class="flex flex-col bg-white divide-y">
+          <div class="cursor-pointer gap-3 flex py-4 px-3">
+            <img src="assets/images/icons/angle_left.svg" alt="back icon" />
+            <span class="text-xl font-bold">Chart</span>
           </div>
-          <div class="flex gap-1 sm:gap-4 text-white text-xs sm:text-sm">
-            <button class="rounded-md bg-red-500 px-2 sm:px-8 py-1">Accept</button>
+        </div>
+        <div class="flex">
+          <div class="chat-users bg-gray-400 h-full divide-y border overflow-y-auto flex-shrink-0 hidden sm:flex flex-col" style="width: 300px; height: calc(100vh - 180px);">
+          </div>
+          <div class="w-full relative">
+            <div class="flex justify-between items-center w-full py-2 px-8 bg-white border">
+              <div class="flex items-center gap-4 ">
+                <img src="assets/images/man5.png" alt="user" />
+                <span class="text-md font-bold">Andrew Parker</span>
+              </div>
+              <div class="flex gap-4 relative">
+                <button>
+                  <img src="assets/images/icons/ic_vcall.svg" alt="vcall"/>
+                </button>
+                <button>
+                  <img src="assets/images/icons/ic_call.svg" alt="call"/>
+                </button>
+                <button class="chat-menu">
+                  <img src="assets/images/icons/ic_more_vertical.svg" alt="more"/>
+                </button>
+                <div class="expand-menu absolute right-0 bottom-0 transform translate-y-full hidden">
+                  <ul class="divide-y border bg-white w-48 mt-2 font-semibold">
+                    <li class="cursor-pointer px-6 py-2">Mute</li>
+                    <li class="cursor-pointer px-6 py-2">Contact Info</li>
+                    <li class="cursor-pointer px-6 py-2">Clear Chat</li>
+                    <li class="cursor-pointer px-6 py-2 text-red-500">Delete Chat</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="chat-box mb-20 overflow-y-auto px-2 pt-4 flex flex-col gap-2">
+            </div>
+            <div class="menu-attach absolute bg-white shadow-lg p-6 rounded-md bottom-20 mx-8 left-0 right-0 hidden">
+              <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-2">
+                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                  <img src="assets/images/icons/ic_camera.svg" alt="camera" />
+                  <span class="text-sm">Camera</span>
+                </div>
+                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                  <img src="assets/images/icons/ic_file_picture.svg" alt="camera" />
+                  <span class="text-sm">Photos</span>
+                </div>
+                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                  <img src="assets/images/icons/ic_file_video.svg" alt="camera" />
+                  <span class="text-sm">Videos</span>
+                </div>
+                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                  <img src="assets/images/icons/ic_file_file.svg" alt="camera" />
+                  <span class="text-sm">Document</span>
+                </div>
+                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                  <img src="assets/images/icons/ic_location.svg" alt="camera" />
+                  <span class="text-sm">Location</span>
+                </div>
+                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                  <img src="assets/images/icons/ic_contact.svg" alt="camera" />
+                  <span class="text-sm">Contact</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="absolute left-5 right-5 bottom-0 flex items-center justify-between pb-4 gap-4">
+              <div class="bg-gray-100 rounded-full border justify-between flex items-center pl-6 pr-1 py-2 border-gray-300 w-full border">
+                <input type="text" class="outline-none bg-transparent w-full" placeholder="Type a message..."/>
+                <button class="flex-shrink-0">
+                  <img src="assets/images/icons/ic_emoji.svg" alt="emoji" />
+                </button>
+              </div>
+              <div class="flex gap-2 items-center flex-shrink-0">
+                <button>
+                  <img src="assets/images/icons/ic_mic.svg" alt="mic" />
+                </button>
+                <button class="btn-attach">
+                  <img src="assets/images/icons/ic_attach.svg" alt="mic" />
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </main>
 </body>
-</html>
 
+</html>
