--- a/profile.html
+++ b/profile.html
@@ -28,23 +28,21 @@
       </div>
       <div class="sm:flex items-center gap-4 hidden">
         <button>
-          <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <button>
-          <img src="assets/images/icons/ic_add.svg" alt="chat icon" class="w-6 h-6"/>
-        </button>
-        <button>
-          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
+          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <div class="flex items-center gap-2 relative">
-          <div class="rounded-full border-red-500 border w-10 h-10">
+          <div class="rounded-full border-red-500 border w-10 h-10 flex-shrink-0">
             <img src="assets/images/man3.png" alt="user avatar" />
           </div>
           <div class="btn-menu flex gap-1 cursor-pointer">
             <span class="font-confortaa text-md font-bold">Edshreean</span>
-            <img src="assets/images/icons/angle_down.svg" alt="down icon" class="icon-menu"/>
+            <img src="assets/images/icons/angle_down.svg" alt="down icon" class="icon-menu" />
           </div>
-          <div class="hidden toggle-menu bg-white absolute right-0 bottom-0 transform translate-y-full px-8 py-2 shadow-xl mt-4 border">
+          <div
+            class="hidden toggle-menu bg-white absolute right-0 bottom-0 transform translate-y-full px-8 py-2 shadow-xl mt-4 border">
             <ul>
               <li>
                 <a href="myprofile.html">Profile</a>
@@ -58,10 +56,11 @@
       </div>
       <!-- <button class="sm:flex px-8 xl:px-16 bg-red-500 rounded-md text-white hover:bg-red-700 py-2">Register</button> -->
       <button class="flex sm:hidden absolute right-5 menu-button" id="">
-        <img src="assets/images/menu.svg" alt="menu icon" id="menu-icon"/>
+        <img src="assets/images/menu.svg" alt="menu icon" id="menu-icon" />
       </button>
     </div>
-    <div class="hidden absolute bg-white flex flex-col h-full left-0 min-h-screen items-center right-0 shadow-lg gap-4" id="menu-mobile">
+    <div class="hidden absolute bg-white flex flex-col h-full left-0 min-h-screen items-center right-0 shadow-lg gap-4"
+      id="menu-mobile">
       <div class="category-list flex flex-col  gap-4"></div>
       <button class="px-8 xl:px-16 bg-red-500 rounded-md text-white hover:bg-red-700 py-2">Register</button>
     </div>
@@ -86,9 +85,6 @@
     <div class="w-full sm:w-8/12 min-h-screen">
       <div class="gap-5 h-max list-container mt-20 overflow-y-auto pb-40 py-5 px-4" style="max-width: 900px;">
         <div class="flex gap-4 items-start">
-          <div class="rounded-full border-2 border-red-500 hidden sm:inline-block flex-shrink-0">
-            <img src="assets/images/man2.png" alt="avatar" class="w-20 h-20" />
-          </div>
           <div class="flex-col">
             <div class="sm:hidden flex items-center gap-4">
               <div class="rounded-full border-2 border-red-500 block my-2 flex-shrink-0">
@@ -101,43 +97,44 @@
               </div>
             </div>
             <div class="flex flex-col sm:flex-col-reverse">
-            <div class="flex flex-col">
-              <span class="font-bold text-md">Will Smith</span>
-              <div class="flex items-center gap-2 ">
-                <span class="text-sm items-center flex mt-1 font-semibold">Mississippi, USA</span>
-                <img src="assets/images/flag_ca.png" alt="flag" />
+              <div class="flex flex-col">
+                <div class="rounded-full border-2 border-red-500 hidden sm:inline-block flex-shrink-0 w-max">
+                  <img src="assets/images/man2.png" alt="avatar" class="w-20 h-20" />
+                </div>
+                <span class="font-bold text-md">Will Smith</span>
+                <div class="flex items-center gap-2 ">
+                  <span class="text-sm items-center flex mt-1 font-semibold">Mississippi, USA</span>
+                  <img src="assets/images/flag_ca.png" alt="flag" />
+                </div>
+                <div class="gap-8 font-semibold hidden sm:flex">
+                  <span class="text-base">100 videos</span>
+                  <span class="text-base">1,673 followers</span>
+                  <span class="text-base">5,964 following</span>
+                </div>
+                <div class="lg:w-1/2 gap-4 flex flex-col text-sm">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt #hashtag
+                  </p>
+                  <p>Followed by briskukadiya and Edshreean</p>
+                </div>
               </div>
-              <div class="gap-8 font-semibold hidden sm:flex">
-                <span class="text-base">100 videos</span>
-                <span class="text-base">1,673 followers</span>
-                <span class="text-base">5,964 following</span>
-              </div>
-              <div class="lg:w-1/2 gap-4 flex flex-col text-sm">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt #hashtag
-                </p>
-                <p>Followed by briskukadiya and Edshreean</p>
+              <div class="flex w-full justify-between lg:w-8/12 gap-1 ml-auto">
+                <div class="flex w-full gap-1">
+                  <button class="w-1/3 sm:py-1 rounded-md bg-red-500 text-white">Follow</button>
+                  <button class="w-1/3 sm:py-1 rounded-md border">Message</button>
+                  <button class="w-1/3 sm:py-1 rounded-md border">Favorite</button>
+                </div>
+                <button class="px-1 sm:px-2 border rounded-md">
+                  <img src="assets/images/icons/angle_down.svg" alt="angledown" />
+                </button>
+                <button class="px-1 sm:px-2 hidden sm:flex items-center">
+                  <img src="assets/images/icons/ic_more.svg" alt="angledown" />
+                </button>
               </div>
             </div>
-            <div class="flex w-full justify-between lg:w-8/12 gap-1 ml-auto">
-              <div class="flex w-full gap-1">
-                <button class="w-1/3 sm:py-1 rounded-md bg-red-500 text-white">Follow</button>
-                <button class="w-1/3 sm:py-1 rounded-md border">Message</button>
-                <button class="w-1/3 sm:py-1 rounded-md border">Favorite</button>
-              </div>
-              <button class="px-1 sm:px-2 border rounded-md">
-                <img src="assets/images/icons/angle_down.svg" alt="angledown" />
-              </button>
-              <button class="px-1 sm:px-2 hidden sm:flex items-center">
-                <img src="assets/images/icons/ic_more.svg" alt="angledown" />
-              </button>
-            </div>
-          </div>
           </div>
         </div>
 
-        <div class="flex flex-col sm:ml-24 ">
-          <div class="box-story overflow-x-auto whitespace-nowrap snap-x py-4">
-          </div>
+        <div class="flex flex-col">
           <div class=" border px-4 py-6 mt-4">
             <div class="flex justify-between pb-4">
               <span class="text-md font-bold">Suggested for you</span>
