--- a/transaction.html
+++ b/transaction.html
@@ -34,14 +34,12 @@
         <button>
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </button>
-        <button>
-          <img src="assets/images/icons/ic_add.svg" alt="chat icon" class="w-6 h-6" />
-        </button>
+       
         <button>
           <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
         </button>
         <div class="flex items-center gap-2 relative">
-          <div class="rounded-full border-red-500 border w-10 h-10">
+          <div class="rounded-full border-red-500 border w-10 h-10 flex-shrink-0">
             <img src="assets/images/man3.png" alt="user avatar" />
           </div>
           <div class="btn-menu flex gap-1 cursor-pointer">
