update payment, setting

--- a/setting.html
+++ b/setting.html
@@ -144,7 +144,7 @@
             </a>
           </div>
           <div class="flex flex-col bg-white divide-y">
-            <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+            <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="faq.html">
               <div class="flex items-center gap-4">
                 <img src="assets/images/icons/ic_support.svg" alt="icon" />
                 <span>Support</span>
