--- a/payment.html
+++ b/payment.html
@@ -105,7 +105,7 @@
               <span class="">Pay with a new card</span>
               <div class="flex lg:w-1/2 bg-gray-100 p-4 gap-2">
                 <img src="assets/images/icons/ic_card.svg" alt="card icon" />
-                <span>Card Number</span>
+                <input placeholder="Card Number" class="outline-none w-full bg-transparent">
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
                 <img src="assets/images/icons/ic_micro.svg" alt="payment icon" />
               </button>
             </div>
-            <div class="h-48"></div>
+            <div class="h-12"></div>
             <div class="flex flex-col gap-4">
               <div class="sm:items-center flex gap-2">
                 <input type="radio" class="pb-2"/>
@@ -137,7 +137,7 @@
                 </p>
               </div>
               <p class="text-sm">Total: <span class="font-bold text-md">€ 0.79</span></p>
-              <button class="px-8 py-2 bg-red-500 rounded-md text-white font-bold w-max">Pay now</button>
+              <button class="px-8 py-2 bg-red-500 rounded-md text-white font-bold w-max">Buy now</button>
             </div>
           </div>
         </div>
