--- a/chat.html
+++ b/chat.html
@@ -31,10 +31,9 @@
         </button>
       </div>
       <div class="sm:flex items-center gap-4 hidden">
-        <button>
+        <a href="chat.html">
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
-        </button>
-       
+        </a>
         <button>
           <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
         </button>
@@ -111,7 +110,7 @@
                 </div>
               </div>
             </div>
-            <div class="chat-box mb-20 overflow-y-auto px-2 pt-4 flex flex-col gap-2">
+            <div class="chat-box mb-20 overflow-y-auto px-2 pt-4 flex flex-col gap-2 "  style=" height: calc(100vh - 320px);">
             </div>
             <div class="menu-attach absolute bg-white shadow-lg p-6 rounded-md bottom-20 mx-8 left-0 right-0 hidden">
               <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-2">
