--- a/getcoin.html
+++ b/getcoin.html
@@ -30,10 +30,9 @@
         </button>
       </div>
       <div class="sm:flex items-center gap-4 hidden">
-        <button>
+        <a href="chat.html">
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
-        </button>
-       
+        </a>
         <button>
           <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
         </button>
@@ -96,7 +95,7 @@
               <img src="assets/images/icons/angle_left.svg" alt="back icon" />
               <span class="text-xl font-bold">Get Coins</span>
             </div>
-            <span class="text-sm text-red-500 font-bold hidden sm:flex">View transaction history</span>
+            <a class="text-sm text-red-500 font-bold hidden sm:flex" href="transaction.html">View transaction history</a>
           </div>
           <div class="flex flex-col px-8 py-2">
             <div class="flex items-center text-sm gap-1">
