--- a/profile.html
+++ b/profile.html
@@ -27,9 +27,9 @@
         </button>
       </div>
       <div class="sm:flex items-center gap-4 hidden">
-        <button>
+        <a href="chat.html">
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
-        </button>
+        </a>
         <button>
           <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
         </button>
