--- a/getcoin.html
+++ b/getcoin.html
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
-      <div class="flex flex-col h-max list-container overflow-y-auto pb-40 py-5 min-h-screen"
+      <div class="flex flex-col h-max list-container overflow-y-auto pt-5 min-h-screen"
         style="max-width: 900px;">
         <div class="bg-white h-24"></div>
         <div class="flex flex-col bg-white ">
