--- a/following.html
+++ b/following.html
@@ -81,7 +81,7 @@
     </div>
     <div class="w-full sm:w-8/12 min-h-screen">
       <div
-        class="flex flex-col gap-5 grid h-max list-container mt-20 overflow-y-auto pb-40 py-5 px-2"
+        class="flex flex-col gap-5 grid h-max list-container mt-20 overflow-y-auto pt-5 px-2"
         style="max-width: 900px;">
         <div class="flex items-center justify-between">
           <div class="flex gap-4 items-center cursor-pointer"><img src="assets/images/man1.png" alt="avatar"
