--- a/notification.html
+++ b/notification.html
@@ -89,7 +89,7 @@
       </div>
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
-      <div class="flex flex-col h-max overflow-y-auto pb-40 py-5 bg-gray-200 min-h-screen"
+      <div class="flex flex-col h-max overflow-y-auto pt-5 bg-gray-200 min-h-screen"
         style="max-width: 900px;">
         <div class="bg-white h-24"></div>
         <div class="flex justify-between bg-white">
