--- a/profile.html
+++ b/profile.html
@@ -98,8 +98,23 @@
             </div>
             <div class="flex flex-col sm:flex-col-reverse">
               <div class="flex flex-col">
+                <div class="flex items-center justify-start gap-4 md:gap-16 pb-4">
                 <div class="rounded-full border-2 border-red-500 hidden sm:inline-block flex-shrink-0 w-max">
-                  <img src="assets/images/man2.png" alt="avatar" class="w-20 h-20" />
+                  <img src="assets/images/man2.png" alt="avatar" class="w-28 h-28" />
+                </div>
+                <div class="flex w-full justify-between lg:w-8/12 gap-1 ml-auto">
+                  <div class="flex w-full gap-1">
+                    <button class="w-1/3 sm:py-1 text-sm px-2 py-1 rounded-md bg-red-500 text-white">Follow</button>
+                    <button class="w-1/3 sm:py-1 text-sm px-2 py-1 rounded-md border">Message</button>
+                    <button class="w-1/3 sm:py-1 text-sm px-2 py-1 rounded-md border">Favorite</button>
+                  </div>
+                  <button class="px-1 sm:px-2 flex-shrink-0 border rounded-md">
+                    <img src="assets/images/icons/angle_down.svg" alt="angledown" />
+                  </button>
+                  <button class="px-1 sm:px-2 hidden sm:flex items-center">
+                    <img src="assets/images/icons/ic_more.svg" alt="angledown" />
+                  </button>
+                </div>
                 </div>
                 <span class="font-bold text-md">Will Smith</span>
                 <div class="flex items-center gap-2 ">
@@ -116,19 +131,6 @@
                   </p>
                   <p>Followed by briskukadiya and Edshreean</p>
                 </div>
-              </div>
-              <div class="flex w-full justify-between lg:w-8/12 gap-1 ml-auto">
-                <div class="flex w-full gap-1">
-                  <button class="w-1/3 sm:py-1 rounded-md bg-red-500 text-white">Follow</button>
-                  <button class="w-1/3 sm:py-1 rounded-md border">Message</button>
-                  <button class="w-1/3 sm:py-1 rounded-md border">Favorite</button>
-                </div>
-                <button class="px-1 sm:px-2 border rounded-md">
-                  <img src="assets/images/icons/angle_down.svg" alt="angledown" />
-                </button>
-                <button class="px-1 sm:px-2 hidden sm:flex items-center">
-                  <img src="assets/images/icons/ic_more.svg" alt="angledown" />
-                </button>
               </div>
             </div>
           </div>
