update my profile

--- a/myprofile.html
+++ b/myprofile.html
@@ -83,7 +83,6 @@
     <div class="w-full sm:w-8/12 min-h-screen">
       <div class="gap-5 h-max list-container mt-20 overflow-y-auto pt-5 px-4" style="max-width: 900px;">
         <div class="flex gap-4 items-start">
-          
           <div class="flex-col">
             <div class="sm:hidden flex items-center gap-4">
               <div class="rounded-full border-2 border-red-500 block my-2 flex-shrink-0">
@@ -97,8 +96,22 @@
             </div>
             <div class="flex flex-col sm:flex-col-reverse">
               <div class="flex flex-col">
-                <div class="rounded-full border-2 border-red-500 hidden sm:inline-block flex-shrink-0 w-max">
-                  <img src="assets/images/man3.png" alt="avatar" class="w-20 h-20" />
+                <div class="flex items-center justify-start gap-16 pb-4">
+                  <div class="rounded-full border-2 border-red-500 hidden sm:inline-block flex-shrink-0 w-max">
+                    <img src="assets/images/man3.png" alt="avatar" class="w-28 h-28" />
+                  </div>
+                  <div class="flex w-full justify-between w-full sm:w-max gap-1">
+                    <button class="sm:py-1 hidden sm:flex">
+                      <img src="assets/images/icons/ic_heart.svg" alt="heart icon" />
+                    </button>
+                    <button class="px-8 sm:py-1 py-2 rounded-md border w-full sm:w-max">Edit Profile</button>
+                    <button class="px-1 sm:px-2 rounded-md border">
+                      <img src="assets/images/icons/angle_down.svg" alt="angledown" />
+                    </button>
+                    <button class="px-1 sm:px-2 hidden sm:flex items-center">
+                      <img src="assets/images/icons/ic_more.svg" alt="angledown" />
+                    </button>
+                  </div>
                 </div>
                 <span class="font-bold text-md">Will Smith</span>
                 <div class="flex items-center gap-2 ">
@@ -125,18 +138,6 @@
                   </p>
                   <p>Followed by briskukadiya and Edshreean</p>
                 </div>
-              </div>
-              <div class="flex w-full justify-between w-full sm:w-max gap-1 ml-auto">
-                <button class="sm:py-1 hidden sm:flex">
-                  <img src="assets/images/icons/ic_heart.svg" alt="heart icon" />
-                </button>
-                <button class="px-8 sm:py-1 rounded-md border w-full sm:w-max">Edit Profile</button>
-                <button class="px-1 sm:px-2 rounded-md border">
-                  <img src="assets/images/icons/angle_down.svg" alt="angledown" />
-                </button>
-                <button class="px-1 sm:px-2 hidden sm:flex items-center">
-                  <img src="assets/images/icons/ic_more.svg" alt="angledown" />
-                </button>
               </div>
             </div>
           </div>
