fix space issue

--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,7 @@
   <script src="assets/js/common.js"></script>
   <script src="assets/js/chat.js"></script>
 
-  <title>Let's Build: With Tailwind CSS - Responsive Navbar</title>
+  <title>SwipSwop</title>
 </head>
 
 <body class="antialiased font-confortaa">
@@ -34,9 +34,9 @@
         <a href="chat.html">
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </a>
-        <button>
-          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
-        </button>
+        <a href="notification.html">
+          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
+        </a>
         <div class="flex items-center gap-2 relative">
           <div class="rounded-full border-red-500 border w-10 h-10 flex-shrink-0">
             <img src="assets/images/man3.png" alt="user avatar" />
