--- a/friends.html
+++ b/friends.html
@@ -13,7 +13,7 @@
   <script src="assets/js/jquery-3.6.0.js"></script>
   <script src="assets/js/app.js"></script>
   <script src="assets/js/friends.js"></script>
-  <title>Let's Build: With Tailwind CSS - Responsive Navbar</title>
+  <title>SwipSwop</title>
 </head>
 
 <body class="antialiased font-confortaa">
@@ -30,9 +30,9 @@
         <a href="chat.html">
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </a>
-        <button>
+        <a href="notification.html">
           <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
-        </button>
+        </a>
         <div class="flex items-center gap-2 relative">
           <div class="rounded-full border-red-500 border w-10 h-10 flex-shrink-0">
             <img src="assets/images/man3.png" alt="user avatar" />
@@ -66,7 +66,7 @@
 
   <main class="flex md:px-6 bg-white lg:py-0">
     <div
-      class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center flex-col gap-10 overflow-y-auto">
+      class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center items-center flex-col gap-10 overflow-y-auto">
       <div class="sidebar bottom-0 fixed flex h-3/4 justify-center mt-32 mb-20 overflow-y-auto top-0 ">
         <div class="flex items-start flex-col px-10 divide-y-2">
           <div id="" class="category-list flex flex-col gap-4 xl:gap-6 pb-10">
