--- a/explorer.html
+++ b/explorer.html
@@ -14,7 +14,7 @@
   <script src="assets/js/jquery-3.6.0.js"></script>
   <script src="assets/js/app.js"></script>
   <script src="assets/js/explorer.js"></script>
-  <title>Let's Build: With Tailwind CSS - Responsive Navbar</title>
+  <title>SwipSwop</title>
 </head>
 
 <body class="antialiased font-confortaa">
@@ -43,7 +43,7 @@
 
   <main class="flex md:px-6 bg-white lg:py-0">
     <div
-      class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center flex-col gap-10 overflow-y-auto">
+      class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center items-center flex-col gap-10 overflow-y-auto">
       <div class="sidebar bottom-0 fixed flex h-3/4 justify-center mt-32 mb-20 overflow-y-auto top-0 ">
         <div class="flex items-start flex-col px-10 divide-y-2">
           <div class="category-list flex flex-col gap-4 xl:gap-6 pb-10">
