--- a/notification.html
+++ b/notification.html
@@ -18,7 +18,7 @@
   <script src="assets/js/notification.js"></script>
 
 
-  <title>Let's Build: With Tailwind CSS - Responsive Navbar</title>
+  <title>SwipSwop</title>
 </head>
 
 <body class="antialiased font-confortaa">
@@ -35,10 +35,9 @@
         <a href="chat.html">
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </a>
-       
-        <button>
-          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6" />
-        </button>
+        <a href="notification.html">
+          <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
+        </a>
         <div class="flex items-center gap-2 relative">
           <div class="rounded-full border-red-500 border w-10 h-10 flex-shrink-0">
             <img src="assets/images/man3.png" alt="user avatar" />
@@ -74,7 +73,7 @@
 
   <main class="flex md:px-6 bg-white lg:py-0">
     <div
-      class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center flex-col gap-10 overflow-y-auto">
+      class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center items-center flex-col gap-10 overflow-y-auto">
       <div class="sidebar bottom-0 fixed flex h-3/4 justify-center mt-32 mb-20 overflow-y-auto top-0 ">
         <div class="flex items-start flex-col px-10 divide-y-2">
           <div id="" class="category-list flex flex-col gap-4 xl:gap-6 pb-10">
@@ -89,7 +88,7 @@
       </div>
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
-      <div class="flex flex-col h-max overflow-y-auto pt-5 bg-gray-200 min-h-screen"
+      <div class="flex flex-col h-max overflow-y-auto pt-5 min-h-screen"
         style="max-width: 900px;">
         <div class="bg-white h-24"></div>
         <div class="flex justify-between bg-white">
@@ -99,8 +98,7 @@
           </div>
           <img src="assets/images/icons/ic_more_vertical.svg" alt="mor icon" />
         </div>
-        <div class="box-notification flex flex-col bg-white divide-y">
-          
+        <div class="box-notification flex flex-col bg-white divide-y overflow-y-auto" style="height: calc(100vh - 200px);">
         </div>
       </div>
     </div>
