--- a/chat.html
+++ b/chat.html
@@ -87,8 +87,8 @@
           <div class="w-full relative">
             <div class="flex justify-between items-center w-full py-2 px-8 bg-white border">
               <div class="flex items-center gap-4 ">
-                <img src="assets/images/man5.png" alt="user" />
-                <span class="text-md font-bold">Andrew Parker</span>
+                <img src="assets/images/man5.png" alt="user" class="selected-user-image"/>
+                <span class="text-md font-bold selected-user-name">Andrew Parker</span>
               </div>
               <div class="flex gap-4 relative">
                 <button>
