--- a/chat.html
+++ b/chat.html
@@ -78,7 +78,7 @@
         <div class="flex flex-col bg-white divide-y">
           <div class="cursor-pointer gap-3 flex py-4 px-3">
             <img src="assets/images/icons/angle_left.svg" alt="back icon" />
-            <span class="text-xl font-bold">Chart</span>
+            <span class="text-xl font-bold">Chat</span>
           </div>
         </div>
         <div class="flex">
