update max width

--- a/getcoin.html
+++ b/getcoin.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="antialiased font-confortaa">
-  <header class="w-screen fixed z-50 bg-white ">
+  <header class="-translate-x-1/2 bg-white fixed left-1/2 mx-auto transform w-screen z-50">
     <div class="flex justify-around p-4 shadow-lg h-20 items-center">
       <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
       <div class="hidden sm:flex divide-x-2 divide-gray-300 p-2 rounded-full bg-gray-200 gap-4">
@@ -69,7 +69,7 @@
     </div>
   </header>
 
-  <main class="flex md:px-6 bg-white lg:py-0">
+  <main class="flex xl:mx-auto md:px-6 bg-white lg:py-0">
     <div
       class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center items-center flex-col gap-10 overflow-y-auto">
       <div class="sidebar bottom-0 fixed flex h-3/4 justify-center mt-32 mb-20 overflow-y-auto top-0 ">
