--- a/chat.html
+++ b/chat.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="antialiased font-confortaa">
-  <header class="w-screen fixed z-50 bg-white ">
+  <header class="-translate-x-1/2 bg-white fixed left-1/2 mx-auto transform w-screen z-50">
     <div class="flex justify-around p-4 shadow-lg h-20 items-center">
       <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
       <div class="hidden sm:flex divide-x-2 divide-gray-300 p-2 rounded-full bg-gray-200 gap-4">
@@ -70,7 +70,7 @@
     </div>
   </header>
 
-  <main class="flex md:px-6 bg-white lg:py-0">
+  <main class="flex xl:mx-auto md:px-6 bg-white lg:py-0">
     <div class="w-full sm:w-full" >
       <div
         class="flex flex-col h-max list-container overflow-y-auto bg-gray-200 mx-auto xl:w-9/12" >
