fix body padding

--- a/explorer.html
+++ b/explorer.html
@@ -19,7 +19,7 @@
 
 <body class="antialiased font-confortaa">
   <header class="bg-white fixed mx-auto w-screen z-50 shadow-lg">
-    <div class="flex justify-between nav-header p-4 h-20 items-center  mx-auto pr-8">
+    <div class="flex justify-between nav-header p-4 h-20 items-center  mx-auto pr-4">
       <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
       <div class="hidden sm:flex divide-x-2 divide-gray-300 p-2 rounded-full bg-gray-200 gap-4">
         <input type="text" class="px-2 py-1 bg-gray-200 outline-none w-64" placeholder="Find accounts" />
@@ -59,7 +59,7 @@
     </div>
 
     <div class="px-4 sm:px-0 w-full sm:w-8/12 min-h-screen">
-      <div class="pb-8 grid h-max grid-cols-2 xl:grid-cols-3 gap-5 mx-auto py-5 overflow-y-auto mt-20 sm:px-10"
+      <div class="pb-8 grid h-max grid-cols-2 xl:grid-cols-3 gap-5  py-5 overflow-y-auto mt-20 sm:px-10"
         style="max-width: 900px;">
         <div class="flex flex-col gap-2 relative rounded-md  h-max">
           <img src="assets/images/image.png" class="rounded-lg h-full" alt="item" />
