--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="w-full sm:w-8/12 min-h-screen">
-      <div class= "pb-40 grid h-max flex flex-col gap-5 mx-auto py-5 overflow-y-auto mt-20 sm:px-10 2xl:px-24" style="max-width: 900px;">
+      <div class= "pb-40 grid h-max flex flex-col gap-5 py-5 overflow-y-auto mt-20 sm:px-10 " style="max-width: 900px;">
 
         <div class="flex flex-col pb-8  ">
           <div class="hidden sm:flex items-center justify-between my-4 gap-4">
