--- a/transaction.html
+++ b/transaction.html
@@ -34,7 +34,6 @@
         <a href="chat.html">
           <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
         </a>
-       
         <a href="notification.html">
           <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
         </a>
@@ -88,7 +87,7 @@
       </div>
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
-      <div class="flex flex-col h-max list-container overflow-y-auto pt-5 min-h-screen"
+      <div class="flex flex-col h-max list-container overflow-y-auto pt-5 min-h-screen px-10"
         style="max-width: 900px;">
         <div class="bg-white h-24"></div>
         <div class="flex flex-col bg-white px-3">
