--- a/payment.html
+++ b/payment.html
@@ -84,7 +84,7 @@
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
       <div
-        class="flex flex-col h-max list-container overflow-y-auto py-5 min-h-screen"
+        class="flex flex-col h-max list-container overflow-y-auto py-5 min-h-screen px-10"
         style="max-width: 900px;">
         <div class="bg-white h-24"></div>
         <div class="flex flex-col bg-white divide-y">
