fix setting page

--- a/setting.html
+++ b/setting.html
@@ -111,7 +111,7 @@
               <img src="assets/images/icons/ic_right_gray.svg" alt="icon right" class="sm:hidden flex"/>
             </div>
           </div>
-          <div class="flex flex-col bg-white divide-y">
+          <div class="flex flex-col bg-white divide-y border-b">
             <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
               <div class="flex items-center gap-4">
                 <img src="assets/images/icons/ic_password.svg" alt="icon" />
@@ -127,7 +127,7 @@
               <img src="assets/images/icons/ic_right_gray.svg" alt="icon right" />
             </a>
           </div>
-          <div class="flex flex-col bg-white divide-y">
+          <div class="flex flex-col bg-white divide-y border-b">
             <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
               <div class="flex items-center gap-4">
                 <img src="assets/images/icons/ic_mail.svg" alt="icon" />
@@ -143,7 +143,7 @@
               <img src="assets/images/icons/ic_right_gray.svg" alt="icon right" />
             </a>
           </div>
-          <div class="flex flex-col bg-white divide-y">
+          <div class="flex flex-col bg-white divide-y border-b">
             <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="faq.html">
               <div class="flex items-center gap-4">
                 <img src="assets/images/icons/ic_support.svg" alt="icon" />
