update logo link

--- a/followers.html
+++ b/followers.html
@@ -21,7 +21,9 @@
 <body class="antialiased font-confortaa">
   <header class="bg-white fixed mx-auto w-screen z-50 shadow-lg">
     <div class="flex justify-between nav-header p-4 h-20 items-center  mx-auto pr-8">
-      <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
+      <a href="index.html" class="cursor-pointer">
+        <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
+      </a>
       <div class="hidden sm:flex divide-x-2 divide-gray-300 p-2 rounded-full bg-gray-200 gap-4">
         <input type="text" class="px-2 py-1 bg-gray-200 outline-none w-64" placeholder="Find accounts" />
         <button>
