--- a/chat.html
+++ b/chat.html
@@ -23,7 +23,9 @@
 <body class="antialiased font-confortaa">
   <header class="bg-white fixed mx-auto w-screen z-50 shadow-lg">
     <div class="flex justify-between nav-header p-4 h-20 items-center  mx-auto pr-8">
-      <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
+      <a href="index.html" class="cursor-pointer">
+        <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
+      </a>
       <div class="hidden sm:flex divide-x-2 divide-gray-300 p-2 rounded-full bg-gray-200 gap-4">
         <input type="text" class="px-2 py-1 bg-gray-200 outline-none w-64" placeholder="Find accounts" />
         <button>
@@ -32,7 +34,7 @@
       </div>
       <div class="sm:flex items-center gap-4 hidden">
         <a href="chat.html">
-          <img src="assets/images/icons/ic_chat.svg" alt="chat icon" class="w-6 h-6" />
+          <img src="assets/images/ico_chat_active.svg" alt="chat icon" class="w-6 h-6" />
         </a>
         <a href="notification.html">
           <img src="assets/images/icons/ic_notif.svg" alt="chat icon" class="w-6 h-6"/>
