update setting page

--- a/setting.html
+++ b/setting.html
@@ -116,6 +116,36 @@
           <div class="flex flex-col bg-white divide-y border-b">
             <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
               <div class="flex items-center gap-4">
+                <img src="assets/images/icons/ic_info.svg" alt="icon"/>
+                <span>FAQ</span>
+              </div>
+              <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+            </a>
+            <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+              <div class="flex items-center gap-4">
+                <img src="assets/images/icons/ic_fingerprint.svg" alt="icon"/>
+                <span>Imprint</span>
+              </div>
+              <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+            </a>
+            <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+              <div class="flex items-center gap-4">
+                <img src="assets/images/icons/ic_file.svg" alt="icon"/>
+                <span>Terms and Conditions</span>
+              </div>
+              <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+            </a>
+            <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+              <div class="flex items-center gap-4">
+                <img src="assets/images/icons/ic_world.svg" alt="icon"/>
+                <span>Data Protection</span>
+              </div>
+              <img src="assets/images/icons/ic_right_gray.svg" alt="icon right"/>
+            </a>
+          </div>
+          <div class="flex flex-col bg-white divide-y border-b">
+            <a class="flex justify-between px-8 items-center py-3 cursor-pointer font-bold" href="#">
+              <div class="flex items-center gap-4">
                 <img src="assets/images/icons/ic_password.svg" alt="icon" />
                 <span>Change Password</span>
               </div>
@@ -161,6 +191,7 @@
               <img src="assets/images/icons/ic_right_gray.svg" alt="icon right" />
             </a>
           </div>
+          
         </div>
       </div>
     </div>
